--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,11 @@
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
 # IDE
-.idea
+Account-Backend.bak/.idea
 # static files
 static
 # Dependency directories (remove the comment below to include it)
 
 # vendor/
+
+.idea/
